Only fork once, and add optimization flags to build plan